--- a/faturamento/pom.xml
+++ b/faturamento/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.github.eduardoconceicao90.icompras</groupId>
-	<artifactId>servicos</artifactId>
+	<artifactId>faturamento</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>servicos</name>
+	<name>faturamento</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -21,11 +21,20 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
