Criando codigo para gerar nota fiscal em pdf

--- a/faturamento/pom.xml
+++ b/faturamento/pom.xml
@@ -33,6 +33,11 @@
 			<version>8.5.17</version>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.20.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
